--- a/src/app/client/components/mapComponent/create-new-feature/create-new-feature.component.html
+++ b/src/app/client/components/mapComponent/create-new-feature/create-new-feature.component.html
@@ -12,7 +12,7 @@
   <table class="popupTableInfo">
     <tr>
       <td>المحطه</td>
-      <td>{{this.drawFeatureGraphic.attributes.Name}}</td>
+      <td>{{this.drawFeatureGraphic.attributes.Station}}</td>
     </tr>
     <tr>
       <td>صور</td>
