add new path length and small map

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -4,7 +4,7 @@
       <img src="/assets/pngIcons/login.png" alt="brand-image">
     </div>
     <div class="site-title mt-4">
-      <h5>منصة ذكي</h5>
+      <h5>منصة  المعالم السياحيه</h5>
     </div>
     <div class="signin-box__form">
       <div *ngIf="this.errorMessage != null && this.errorMessage != ''">
