--- a/src/app/shared/components/headers/admin-header/AdminHeaderComponent.html
+++ b/src/app/shared/components/headers/admin-header/AdminHeaderComponent.html
@@ -4,7 +4,7 @@
       <app-feather-icons [icon]="'grid'" (click)=collapseSidebar()></app-feather-icons>
     </div>
     <div style="color: white;">
-      <h5>نظام ذكي</h5>
+      <h5>نظام  المعالم السياحيه</h5>
     </div>
     <div class="nav-right right-menu">
       <div ngbDropdown class="d-inline-block user-profile-dropdown">
