--- a/src/app/shared/components/headers/client-header/ClientHeaderComponent.html
+++ b/src/app/shared/components/headers/client-header/ClientHeaderComponent.html
@@ -11,7 +11,7 @@
 
 <!--&lt;!&ndash;      <img *ngIf="!isMenuCollapsed || !headerStyle" src="/assets/images/zakyLogo.png" class="navbar-brand mr-4  zakyLogoHeader"/>&ndash;&gt;-->
 
-<!--      <a *ngIf="!isMenuCollapsed || !headerStyle" class="navbar-brand mr-4 text-sm-right" style="color: wheat;font-weight: bold;">ذكي</a>-->
+<!--      <a *ngIf="!isMenuCollapsed || !headerStyle" class="navbar-brand mr-4 text-sm-right" style="color: wheat;font-weight: bold;"> المعالم السياحيه</a>-->
 
 <!--      <button class="navbar-toggler" type="button" (click)="isMenuCollapsed = !isMenuCollapsed">-->
 <!--       <span style="color: white"> &#9776;</span>-->
