--- a/src/app/client/components/land-map/land-map.component.scss
+++ b/src/app/client/components/land-map/land-map.component.scss
@@ -1,35 +1,43 @@
-.legendImage {
+.carAnimation {
   position: absolute;
-  bottom: 15px;
-  left: 0;
-  height: 140px;
-  z-index: 2;
+  top: 200px;
+  right: 23px;
+  cursor: pointer;
+  width: 34px;
+  height: 34px;
 }
-
-.basemapImage {
+.iconInformatios {
   position: absolute;
-  top: 58px;
-  left: 23px;
+  top: 153px;
+  left: 15px;
   cursor: pointer;
   width: 34px;
   height: 34px;
 }
 
-.getLocationImage {
+.measurements {
+  padding: 4px 8px;
+  font-size: 25px;
+  bottom: 15px;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%);
   position: absolute;
-  top: 100px;
-  left: 16px;
-  cursor: pointer;
-  width: 45px;
-  height: 45px;
+  background-color: aquamarine;
+}
+.textInformatios{
+  max-width: 250px;
+  padding: 1rem;
+  background: linear-gradient(to right, red, purple);
+  padding: 3px;
+  background-color: #4ACFD9;
+  position: absolute;
+  top: 121px;
+  left: 58px;
 }
 
-.legendHover{
-  position: absolute;
-  top: 157px;
-  left: 20px;
-  width: 35px;
-  height: 35px;
+.module {
+  background: #222;
+  color: white;
+  padding: 2rem;
 }
-
-
