add share buttons

--- a/src/app/client/components/land-map/land-map.component.html
+++ b/src/app/client/components/land-map/land-map.component.html
@@ -19,3 +19,6 @@
   </div>
 </div>
 <app-exist-map></app-exist-map>
+
+<img src="./assets/pngIcons/icons8-facebook-50.png" class="fbShare" (click)="this.createNavigationUrl('facebook')">
+<img src="./assets/pngIcons/icons8-twitter-50.png" class="twitterShare" (click)="this.createNavigationUrl('twitter')">
