--- a/src/app/client/components/land-map/land-map.component.scss
+++ b/src/app/client/components/land-map/land-map.component.scss
@@ -41,3 +41,21 @@
   color: white;
   padding: 2rem;
 }
+
+.fbShare{
+  position: absolute;
+  top: 200px;
+  left: 14px;
+  cursor: pointer;
+  width: 34px;
+  height: 34px;
+}
+
+.twitterShare{
+  position: absolute;
+  top: 247px;
+  left: 15px;
+  cursor: pointer;
+  width: 34px;
+  height: 34px;
+}
