add new features map

--- a/src/app/client/components/land-map/land-map.component.html
+++ b/src/app/client/components/land-map/land-map.component.html
@@ -3,14 +3,13 @@
   <div class="measurements" *ngIf="this.lineMeasurements">
     {{this.lineMeasurements}}
   </div>
-  <img src="./assets/pngIcons/icons8-car-50.png" class="carAnimation" (click)="this.runAnimation()">
+<!--  <img src="./assets/pngIcons/icons8-car-50.png" class="carAnimation" (click)="this.runAnimation()">-->
   <img src="./assets/pngIcons/icons8-information-50.png" class="iconInformatios" (click)="this.getInforamtions =!this.getInforamtions ">
 
 
   <div class="textInformatios" *ngIf="this.getInforamtions">
     <div class="module">
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero pariatur corporis quaerat voluptatum eos tempora temporibus nisi voluptates sed, exercitationem sequi dolore culpa incidunt accusamus, quasi unde reprehenderit ea molestias.
-  </div>
+      تم تصميم هذا التطبيق كمقترح سياحي بحيث يسهل على السائح و يعطيه التصور الكامل عن رحلته من قبل الطالبه ايمان العتيبي  </div>
   </div>
 
 
